--- a/.env.local
+++ b/.env.local
@@ -5,3 +5,5 @@ VITE_FIREBASE_PROJECT_ID=sih25-5b249
 VITE_FIREBASE_STORAGE_BUCKET=sih25-5b249.firebasestorage.app
 VITE_FIREBASE_MESSAGING_SENDER_ID=695852782673
 VITE_FIREBASE_APP_ID=1:695852782673:web:4a567e3a888e7525d09470
+VITE_GEMINI_API_KEY=AIzaSyBNUXolNuURneMKHd-mLy3bu0V65fewpo0
+VITE_GROQ_API_KEY=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
