--- a/backend/.env
+++ b/backend/.env
@@ -8,3 +8,8 @@ ALLOW_ORIGINS=["http://localhost:8080"]
 # AUDIO_MODEL_PATH=backend/models/wav2vec2
 # TABULAR_MODEL_PATH=backend/models/tabular_model.bin
 # FUSION_MODEL_PATH=backend/models/fusion_model.pt
+SMTP_SERVER=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USERNAME=anugrahks2006@gmail.com
+SMTP_PASSWORD=pjongorionrdmskf
+SMTP_SENDER=anugrahks2006@gmail.com
